Teste de fixação de cabeçalho

--- a/exercicios/ex023/tabela02.html
+++ b/exercicios/ex023/tabela02.html
@@ -13,6 +13,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption {            
@@ -23,6 +24,12 @@
         }
 
         thead, tfoot {
+            background-color: darkgray;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
             background-color: darkgray;
         }
 
@@ -199,5 +206,17 @@
             </tr>
         </tfoot>
     </table>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fugit culpa id doloremque necessitatibus officia corrupti. Officia vitae voluptate quae tenetur hic et ipsum? Ipsum odit nulla aut sunt quidem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestiae recusandae illum et veritatis exercitationem amet impedit? Blanditiis sed, quae quo voluptas sit consequatur aspernatur, nemo cum, amet voluptates quas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia illo ad hic vero nesciunt earum placeat blanditiis autem, sapiente dolorem quas incidunt consequuntur sequi a ullam ab tempora impedit voluptatum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore repellendus quod perspiciatis, accusamus deleniti ex? Deserunt ducimus, maxime repellat nulla dolore id expedita. Sunt fuga inventore voluptatibus, expedita ea dolores.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fugit culpa id doloremque necessitatibus officia corrupti. Officia vitae voluptate quae tenetur hic et ipsum? Ipsum odit nulla aut sunt quidem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestiae recusandae illum et veritatis exercitationem amet impedit? Blanditiis sed, quae quo voluptas sit consequatur aspernatur, nemo cum, amet voluptates quas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia illo ad hic vero nesciunt earum placeat blanditiis autem, sapiente dolorem quas incidunt consequuntur sequi a ullam ab tempora impedit voluptatum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore repellendus quod perspiciatis, accusamus deleniti ex? Deserunt ducimus, maxime repellat nulla dolore id expedita. Sunt fuga inventore voluptatibus, expedita ea dolores.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fugit culpa id doloremque necessitatibus officia corrupti. Officia vitae voluptate quae tenetur hic et ipsum? Ipsum odit nulla aut sunt quidem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestiae recusandae illum et veritatis exercitationem amet impedit? Blanditiis sed, quae quo voluptas sit consequatur aspernatur, nemo cum, amet voluptates quas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia illo ad hic vero nesciunt earum placeat blanditiis autem, sapiente dolorem quas incidunt consequuntur sequi a ullam ab tempora impedit voluptatum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore repellendus quod perspiciatis, accusamus deleniti ex? Deserunt ducimus, maxime repellat nulla dolore id expedita. Sunt fuga inventore voluptatibus, expedita ea dolores.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ab recusandae quis unde, ut modi numquam animi porro debitis atque minus, ipsum itaque rem, mollitia facere delectus est eos illum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae labore doloremque laudantium rem nisi modi porro aliquam perferendis omnis corporis in, et facere at consequatur saepe enim id earum eos?
+    </p>
 </body>
 </html>
