--- a/exercicios/ex025/form01.html
+++ b/exercicios/ex025/form01.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Primeiro Formulário</h1>
-    <form action="">
+    <form action="cadastro.php" autocomplete="on">
         <p>
-            Nome: <input type="text" name="nome" id="nome">
+            <label for="inome">Nome:</label> <input type="text" name="nome" id="inome">
         </p>
         <p>
-            Sobrenome: <input type="text" name="sobrenome" id="sobrenome">
+            <label for="isobrenome">Sobrenome:</label> <input type="text" name="sobrenome" id="isobrenome">
         </p>
         <p>
             <input type="submit" value="Enviar">
