Modificações no site do exercício

--- a/exercicios/ex026/mq001/index.html
+++ b/exercicios/ex026/mq001/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <header>
-        <h1>Notícias</h1>
+        <h1>
+            Notícias
+        </h1>
         <menu>
             <ul>
                 <li>Tecnologia</li>
@@ -24,7 +26,9 @@
 
     <main>
         <article>
-            <h2>Media Queries em CSS</h2>
+            <h2>
+                Media Queries em CSS
+            </h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero distinctio tempora provident ex sed fugiat magni aut ratione praesentium optio quas quos cum quis dolorem necessitatibus amet, facilis obcaecati earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa eius ipsum maiores ipsa blanditiis eaque at quod. Perferendis dicta minima commodi nihil, iure voluptatum id dignissimos minus odio illum quis.
             </p>
