--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries</title>
+    <link rel="stylesheet" href="styles/estilo.css" media="all">
+    <link rel="stylesheet" href="styles/media-query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="celular" src="../imgs/icon-phone.png" alt="Versão para celular">
+        <img id="tablet" src="../imgs/icon-tablet.png" alt="Versão para tablet">
+        <img id="impressora" src="../imgs/icon-print.png" alt="Versão para impressora">
+        <img id="pc" src="../imgs/icon-pc.png" alt="Versão para computador">
+        <img id="tv" src="../imgs/icon-tv.png" alt="Versão para TV">
+    </main>
 </body>
 </html>
