Versão mobile do projeto

--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Exemplo</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/estilo.css">
 </head>
 <body>
@@ -12,7 +13,10 @@
         <h1>
             Site de Exemplo
         </h1>
-        <menu>
+        <span id="icone-menu" class="material-icons" onclick="abrirMenu()">
+            menu
+        </span>
+        <menu id="menu">
             <ul>
                 <li>
                     <a href="#">Opção 1</a>
@@ -49,5 +53,15 @@
             </p>
         </article>
     </main>
+
+    <script>
+        function abrirMenu() {
+            if (menu.style.display == 'none') {
+                menu.style.display = 'block'
+            } else {
+                menu.style.display = 'none'
+            }
+        }
+    </script>
 </body>
 </html>
